syntax = "proto3";

package go.micro.srv.v1.node;

service Node {
	rpc NodeIndex(NodeReq) returns (NodeRsp) {}
	rpc NodeChildren(NodeReq) returns (stream NodeRsp) {}
	
	rpc NodeRead(NodeReq) returns (NodeInfo) {}
	rpc NodeSave(NodeInfo) returns (NodeInfo) {}
	rpc NodeSignUp(NodeRegister) returns (NodeRegister) {}
	rpc NodePatch(NodeInfo) returns (NodeInfo) {}
	rpc NodeDelete(NodeReq) returns (NodeRsp) {}
}

message NodeReq {
	string parentId = 1;
	string guid = 2;
	string type = 3;
}

message LiAttr {
	string guid = 1;
	string type = 2;
}

message NodeRsp {
	bool children = 1;
	string id = 2;
	LiAttr li_attr = 3;
	string parent = 4;
	string text = 5;
	string type = 6;
}

message NodeInfo {
	string id = 1;
	string login_id = 2;
	string auth_method = 3;
	string type = 4;
	string parent_node = 5;
	string name = 6;
	string email = 7;
	string state = 8;
	string gender = 9;
	string rank = 10;
}

message NodeRegister {
	string id = 1;
	string login_id = 2;
	string auth_method = 3;
	string type = 4;
	string parent_node = 5;
	string name = 6;
	string email = 7;
	string state = 8;
	string gender = 9;
	string rank = 10;
	uint32 register = 11;
}

